Now rendering icons

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,25 @@
     transform: rotate(360deg);
   }
 }
+
+.icon-container {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+
+.icon-container .icon-text {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+  position: absolute;
+  z-index: 1;
+}
+
+.icon-container:hover .icon-text {
+  visibility: visible;
+}
